Add auto managing selected items Add documentation Add demo app Change ionic version dependency Add 'selectedProp' option

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "description": "Ionic Android Contextual Action Bar",
   "main": "android-cab.js",
   "dependencies": {
-      "ionic": ">=1.0.0-beta.14"
+      "ionic": ">=1.0.0-rc.0",
+      "lodash": ">=3.6.0"
   },
   "keywords": [
     "ionic",
